Bug#15942 (RBR ignored --binlog_ignore_db and tries to map table on slave for writes):   Added code to do the filtering (seems to have gone away).